--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <p id="status">🔄 Sprawdzanie statusu serwera...</p>
 
 <script>
-  const serverIP = "{{vortexnightcraft.myvnc.com}}"; // ← np. play.twojserwer.pl
+  const serverIP = "vortexnightcraft.myvnc.com"; // ← np. play.twojserwer.pl
 
   fetch(`https://api.mcsrvstat.us/2/${vortexnightcraft.myvnc.com}`)
     .then(response => response.json())
