--- a/index.html
+++ b/index.html
@@ -65,24 +65,25 @@
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
 
-  <script>
-    const serverIP = "vortexnightcraft.myvnc.com";
+<script>
+  const serverIP = "vortexnightcraft.myvnc.com";
 
-    fetch(`https://api.mcsrvstat.us/2/vortexnightcraft.myvnc.com`)
-      .then(response => response.json())
-      .then(data => {
-        if (data.online) {
-          document.getElementById("status").innerHTML =
-            `🟢 Serwer online – ${data.players.online} graczy`;
-        } else {
-          document.getElementById("status").innerHTML =
-            `🔴 Serwer offline`;
-        }
-      })
-      .catch(err => {
+  fetch(`https://mcsrvstat.us/server/Vortexnightcraft.myvnc.com`)
+    .then(response => response.json())
+    .then(data => {
+      console.log(data);  // Dodajemy logowanie odpowiedzi w konsoli
+
+      if (data.online) {
         document.getElementById("status").innerHTML =
-          `⚠️ Nie udało się pobrać statusu`;
-      });
-  </script>
-</body>
-</html>
+          `🟢 Serwer online – ${data.players.online} graczy`;
+      } else {
+        document.getElementById("status").innerHTML =
+          `🔴 Serwer offline`;
+      }
+    })
+    .catch(err => {
+      console.error("Błąd podczas pobierania statusu:", err);  // Dodajemy logowanie błędu
+      document.getElementById("status").innerHTML =
+        `⚠️ Nie udało się pobrać statusu`;
+    });
+</script>
