--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
       if (data.online) {
         document.getElementById("status").innerHTML =
-          `🟢 Serwer online – ${data.players.online} graczy`;
+          `🟢 Serwer online test – ${data.players.online} graczy`;
       } else {
         document.getElementById("status").innerHTML =
           `🔴 Serwer offline`;
