--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 <script>
   const serverIP = "vortexnightcraft.myvnc.com";
 
-  fetch(`https://mcsrvstat.us/server/Vortexnightcraft.myvnc.com`)
+  fetch(`https://api.mcsrvstat.us/2/vortexnightcraft.myvnc.com`)
     .then(response => response.json())
     .then(data => {
       console.log(data);  // Dodajemy logowanie odpowiedzi w konsoli
