--- a/index.html
+++ b/index.html
@@ -65,17 +65,14 @@
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
 
+<p id="status">🔄 Sprawdzanie statusu serwera...</p>
+
 <script>
   const serverIP = "vortexnightcraft.myvnc.com"; // Twój adres serwera
 
-  fetch(`https://ismcserver.online/${serverIP}`)
-    .then(response => {
-      console.log(response);  // Logujemy odpowiedź przed parsowaniem JSON
-      return response.json();
-    })
+  fetch(`https://mcapi.us/server/status?ip=vortexnightcraft.myvnc.com`)
+    .then(response => response.json())
     .then(data => {
-      console.log(data);  // Logujemy dane odpowiedzi w konsoli
-
       if (data.online) {
         document.getElementById("status").innerHTML =
           `🟢 Serwer online – ${data.players.now} graczy`;
@@ -90,3 +87,4 @@
         `⚠️ Nie udało się pobrać statusu`;
     });
 </script>
+
