--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <script>
   const serverIP = "vortexnightcraft.myvnc.com"; // Twój adres serwera
 
-  fetch(`https://mcapi.us/server/status?ip=vortexnightcraft.myvnc.com`)
+  fetch(`https://mcstatus.io/status/java/vortexnightcraft.myvnc.com`)
     .then(response => response.json())
     .then(data => {
       if (data.online) {
