--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 <script>
   const serverIP = "vortexnightcraft.myvnc.com"; // Twój adres serwera
 
-  fetch(`https://minecraftserverstatus.com/server?url=vortexnightcraft.myvnc.com`)
+  fetch(`https://mcsrvstat.us/server/Vortexnightcraft.myvnc.com`)
     .then(response => response.json())
     .then(data => {
       if (data.online) {
