--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </head>
 <body>
   <div class="overlay">
-    <img src="logo.png" alt="Logo serwera" class="logo">
+    <img src="https://example.com/path/to/your/logo.png" alt="Logo serwera" class="logo">
     <h1>VortexNightCraft</h1>
     <p class="ip">🌍 IP: <strong>vortexnightcraft.myvnc.com</strong></p>
     <p>🧱 Wersja: <strong>1.20+</strong></p>
@@ -65,12 +65,10 @@
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
 
-<p id="status">🔄 Sprawdzanie statusu serwera...</p>
+  <script>
+    const serverIP = "vortexnightcraft.myvnc.com";  // Twój adres serwera
 
-<script>
-  const serverIP = "vortexnightcraft.myvnc.com"; // Twój adres serwera
-
-  fetch(`https://mcsrvstat.us/server/Vortexnightcraft.myvnc.com`)
+    fetch(`https://api.mcsrvstat.us/2/${serverIP}`)
       .then(response => response.json())
       .then(data => {
         if (data.online) {
@@ -88,5 +86,5 @@
   </script>
 </body>
 </html>
-</script>
+
 
