--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
     <h1>VortexNightCraft</h1>
     <p class="ip">🌍 IP: <strong>vortexnightcraft.myvnc.com</strong></p>
     <p>🧱 Wersja: <strong>1.20+</strong></p>
+
     <p id="status">🔄 Sprawdzanie statusu serwera...</p>
+    <p id="motd">🔄 Pobieranie MOTD...</p>
 
     <div class="info">
       <p>Survival + gildie, ekonomia, eventy, aktywna administracja – zapraszamy!</p>
@@ -65,36 +67,44 @@
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
 
-const server1IP = "vortexnightcraft.myvnc.com";
+  <script>
+    const serverIP = "vortexnightcraft.myvnc.com";
 
-fetch(`https://api.mcsrvstat.us/2/${server1IP}`)
-  .then(response => response.json())
-  .then(data => {
-    if (data.online) {
-      const playerCount = data.players && data.players.online !== undefined
-        ? data.players.online
-        : "brak danych";
+    // Pobieranie danych z API
+    fetch(`https://api.mcsrvstat.us/2/${serverIP}`)
+      .then(response => response.json())
+      .then(data => {
+        console.log(data); // Sprawdzanie pełnej odpowiedzi w konsoli
 
-      document.getElementById("status").innerHTML =
-        `🟢 Serwer online – ${playerCount} graczy`;
+        if (data.online) {
+          const playerCount = data.players && data.players.online !== undefined
+            ? data.players.online
+            : "brak danych"; // Sprawdzanie liczby graczy
 
-      // MOTD
-      const motdElement = document.getElementById("motd");
-      if (data.motd && data.motd.clean) {
-        motdElement.innerHTML = `📢 ${data.motd.clean.join("<br>")}`;
-      } else {
-        motdElement.innerHTML = `📢 MOTD niedostępny`;
-      }
+          // Wyświetlanie statusu serwera
+          document.getElementById("status").innerHTML =
+            `🟢 Serwer online – ${playerCount} graczy`;
 
-    } else {
-      document.getElementById("status").innerHTML =
-        `🔴 Serwer offline`;
-    }
-  })
-  .catch(err => {
-    console.error("Błąd:", err);
-    document.getElementById("status").innerHTML =
-      `⚠️ Nie udało się pobrać statusu`;
-  });
+          // Wyświetlanie MOTD
+          const motdElement = document.getElementById("motd");
+          if (data.motd && data.motd.clean) {
+            motdElement.innerHTML = `📢 ${data.motd.clean.join("<br>")}`;
+          } else {
+            motdElement.innerHTML = `📢 MOTD niedostępny`;
+          }
+
+        } else {
+          document.getElementById("status").innerHTML =
+            `🔴 Serwer offline`;
+        }
+      })
+      .catch(err => {
+        console.error("Błąd:", err);
+        document.getElementById("status").innerHTML =
+          `⚠️ Nie udało się pobrać statusu`;
+      });
+  </script>
+</body>
+</html>
 
 
