--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
       max-width: 200px;
       margin-bottom: 20px;
     }
+    #motd {
+      font-size: 1.2em;
+      margin-top: 20px;
+      color: #f39c12;
+    }
   </style>
 </head>
 <body>
@@ -59,44 +64,59 @@
     <p>🧱 Wersja: <strong>1.20+</strong></p>
     <p id="status">🔄 Sprawdzanie statusu serwera...</p>
 
+    <div id="motd"></div> <!-- Tutaj wyświetli się MOTD -->
+
     <div class="info">
       <p>Survival + gildie, ekonomia, eventy, aktywna administracja – zapraszamy!</p>
     </div>
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
 
-<script>
-  const serverIP = "vortexnightcraft.myvnc.com";
+  <script>
+    const serverIP = "vortexnightcraft.myvnc.com";
 
-  fetch(`https://api.mcsrvstat.us/2/${serverIP}`)
-    .then(response => response.json())
-    .then(data => {
-      console.log(data); // 👈 Dodaj to żeby zobaczyć pełną odpowiedź w konsoli
+    // Pobieranie danych z API
+    fetch(`https://api.mcsrvstat.us/2/${serverIP}`)
+      .then(response => response.json())
+      .then(data => {
+        console.log(data); // Sprawdzanie pełnej odpowiedzi w konsoli
 
-      if (data.online) {
-        // Sprawdź czy pole 'players' istnieje i czy ma wartość
-        const playerCount = data.players && data.players.online !== undefined ? data.players.online : "brak danych";
+        if (data.online) {
+          const playerCount = data.players && data.players.online !== undefined
+            ? data.players.online
+            : "brak danych"; // Sprawdzanie liczby graczy
 
+          // Wyświetlanie statusu serwera
+          document.getElementById("status").innerHTML =
+            `🟢 Serwer online – ${playerCount} graczy`;
+
+          // Wyświetlanie MOTD
+          const motdElement = document.getElementById("motd");
+          if (data.motd && data.motd.clean) {
+            motdElement.innerHTML = `📢 ${data.motd.clean.join("<br>")}`;
+          } else {
+            motdElement.innerHTML = `📢 MOTD niedostępny`;
+          }
+
+        } else {
+          document.getElementById("status").innerHTML =
+            `🔴 Serwer offline`;
+        }
+      })
+      .catch(err => {
+        console.error("Błąd:", err);
         document.getElementById("status").innerHTML =
-          `🟢 Serwer online – ${playerCount} graczy`;
-      } else {
-        document.getElementById("status").innerHTML =
-          `🔴 Serwer offline`;
-      }
-    })
-    .catch(err => {
-      console.error("Błąd:", err);
-      document.getElementById("status").innerHTML =
-        `⚠️ Nie udało się pobrać statusu`;
-    });
+          `⚠️ Nie udało się pobrać statusu`;
+      });
 
-  // Odśwież stronę co 30 sekund (30000 ms)
-  setInterval(function() {
-    location.reload();  // Funkcja odświeżająca stronę
-  }, 5000);  // 5000 ms = 10 sekund
-</script>
+    // Odśwież stronę co 30 sekund (30000 ms)
+    setInterval(function() {
+      location.reload();  // Funkcja odświeżająca stronę
+    }, 30000);  // 30000 ms = 30 sekund
+  </script>
 
 </body>
 </html>
+
 
 
