--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
 
     // Odświeżenie statusu co 30 sekund
     setInterval(function() {
-      location.reload(); // Odświeżenie strony
+      updateServerStatus(); // Ponowne wywołanie funkcji, aby pobrać nowe dane
     }, 5000);  // 5000 ms = 5 sekund
   </script>
 
