--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://wallpapercave.com/wp/wp2757874.jpg') no-repeat center center fixed;
+      background: url('https://images.unsplash.com/photo-1606788075760-1761a17fbd0d?fit=crop&w=1920&q=80') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
