--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 </head>
 <body>
   <div class="overlay">
-    <img src="https://example.com/path/to/your/logo.png" alt="Logo serwera" class="logo">
+    <img src="https://img.freepik.com/premium-psd/3d-minecraft-dynamic-gradient-icon_1082964-224.jpg?w=740" alt="Logo serwera" class="logo">
     <h1>VortexNightCraft</h1>
     <p class="ip">🌍 IP: <strong>vortexnightcraft.myvnc.com</strong></p>
     <p>🧱 Wersja: <strong>1.20+</strong></p>
