--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      background: url('https://wallpapercave.com/wp/wp2757874.jpg') no-repeat center center fixed;
+      background: url('https://rare-gallery.com/thumbnail/423893-Minecraft-Shader-shaders-sunset-reflection-snow.jpg') no-repeat center center fixed;
       background-size: cover;
       color: white;
       text-align: center;
