--- a/index.html
+++ b/index.html
@@ -62,7 +62,8 @@
     <div id="motd"></div>
 
     <div class="info">
-      <p>Survival + gildie, ekonomia, eventy, aktywna administracja – zapraszamy!</p>
+      <p>Strona jest w trakcie budowy, Ale już teraz zapraszam cię na przyjemną rozgrywkę</p>
+      <p>Strona jest w trakcie budowy, Ale już teraz zapraszam cię na przyjemną rozgrywkę</p>
     </div>
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
