--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 <body>
   <div class="overlay">
     <h1>VortexNightCraft</h1>
-    <p class="ip">🌍 IP: <strong>vortexnightcraft.myvnc.com</strong></p>
+    <p class="ip">🌍 IP<strong class="red">: <strong class="blue">vortexnightcraft.myvnc.com</strong></p>
     <p>🧱 Wersja: <strong>1.20+</strong></p>
     <p id="status">🔄 Sprawdzanie statusu serwera...</p>
 
