--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
     </div>
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
-
+<footer style="margin-top: 30px; font-size: 0.9em; opacity: 0.7;">
+  &copy; 2025 VortexNightCraft | Strona by Deyvsonix
+</footer>
   <script>
     const serverIP = "vortexnightcraft.myvnc.com";
 
