--- a/index.html
+++ b/index.html
@@ -5,8 +5,11 @@
   <title>VortexNightCraft</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
+      overflow: hidden;
+      height: 100%;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background: url('https://rare-gallery.com/thumbnail/423893-Minecraft-Shader-shaders-sunset-reflection-snow.jpg') no-repeat center center fixed;
       background-size: cover;
@@ -55,7 +58,7 @@
 <body>
   <div class="overlay">
     <h1>VortexNightCraft</h1>
-    <p class="ip">🌍 IP<strong class="red">: <strong class="blue">vortexnightcraft.myvnc.com</strong></p>
+    <p class="ip">🌍 IP: vortexnightcraft.myvnc.com</strong></p>
     <p>🧱 Wersja: <strong>1.20+</strong></p>
     <p id="status">🔄 Sprawdzanie statusu serwera...</p>
 
