--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
   <!-- Dodanie napisu na dole strony -->
   <div class="footer">
     <p>VortexNightCraft - Wszystkie prawa zastrzeżone.</p>
+    <p>@2k25 by Deyvsonix</p>
   </div>
 
   <script>
