--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
   <div class="overlay">
     <h1>VortexNightCraft</h1>
     <p class="ip">🌍 IP: <strong>vortexnightcraft.myvnc.com</strong></p>
-    <p>🧱 Wersja: <strong>1.20+</strong></p>
+    <p>🧱 Wersja: <strong>1.20.4</strong></p>
     <p id="status">🔄 Sprawdzanie statusu serwera...</p>
 
     <div id="motd"></div>
 
     <div class="info">
-      <p>Strona jest w trakcie budowy, Ale już teraz zapraszam cię na przyjemną rozgrywkę</p>
-      <p>Strona jest w trakcie budowy, Ale już teraz zapraszam cię na przyjemną rozgrywkę</p>
+      <p>Strona jest w trakcie budowy</p>
+      <p>Zapraszamy serdecznie na serwer, miłej gry</p>
     </div>
     <a class="btn" href="https://discord.gg/twoj-link" target="_blank">🎮 Dołącz do Discorda</a>
   </div>
